Fix text alignment issue

--- a/frontend/src/components/OrgEvents/OrgEvents.css
+++ b/frontend/src/components/OrgEvents/OrgEvents.css
@@ -14,6 +14,7 @@
 .cards{
     margin-left: 8px;
     margin-top: 10px;
+	text-align: center;
 }
 
 .pagination{
